# wtvr3d-editor

./: LICENSE  README.md  custom-elements.json  index.html  package-lock.json  package.json
src/: Wtvr3dEditor.ts  wtvr3d-editor.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/common/: styles.ts
src/components/panels/: w3d-material-panel.ts
