[package]
name = "wtvr3d-editor"
version = "0.1.0"
description = "A Tauri App"
authors = [ "John Tiesselune" ]
license = ""
repository = ""
default-run = "wtvr3d-editor"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "wtvr3d-editor"
path = "src/main.rs"
